Move to responsive

--- a/css/global.css
+++ b/css/global.css
@@ -66,7 +66,6 @@ input {
   text-align: center;
 
   @media (max-width: $sm) {
-    padding: 0 20px;
     font-size: 34px;
   }
 }
@@ -83,26 +82,12 @@ input {
 /* CONTAINER */
 
 .cont {
-  width: 1320px;
+  width: 100%;
+  max-width: 1320px;
   margin: 0 auto;
 
-  @media (max-width: $xxl) {
-    width: 1120px;
-  }
-
-  @media (max-width: $xl) {
-    width: 912px;
-  }
-
-  @media (max-width: $lg) {
-    width: 688px;
-  }
-
-  @media (max-width: $md) {
-    width: 496px;
-  }
-
-  @media (max-width: $sm) {
-    width: 100%;
+  @media (min-width: $sm_) {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
