--- a/css/sections/apm.css
+++ b/css/sections/apm.css
@@ -27,7 +27,7 @@
 
       @media (max-width: 390px) {
         width: 100%;
-        padding: 0 20px;
+        margin-bottom: 30px;
       }
 
       .color-box {
@@ -39,6 +39,10 @@
         font-weight: 400;
         position: relative;
         margin-bottom: 30px;
+
+        @media (max-width: 390px) {
+          margin-bottom: 15px;
+        }
 
         &:before {
           content: '';
