--- a/css/sections/plus-and-minus.css
+++ b/css/sections/plus-and-minus.css
@@ -12,7 +12,8 @@
       }
   
       @media (max-width: $md) {
-        padding-left: 0;
+        padding-left: 20px;
+        padding-right: 20px;
       }
     }
 
@@ -25,8 +26,9 @@
       .item {
         position: relative;
 
-        @media (max-width: $sm) {
-          padding: 0 20px;
+        @media (max-width: $md) {
+          padding-left: 30px;
+          padding-right: 20px;
         }
 
         &:before {
@@ -37,6 +39,10 @@
           width: 14px;
           height: 3px;
           background-color: #ea4b35;
+
+          @media (max-width: $md) {
+            left: 0;
+          }
         }
 
         & + .item {
@@ -64,7 +70,7 @@
 
       @media (max-width: $md) {
         padding-left: 90px;
-        background-position: 0 50%;
+        background-position: 10px 50%;
       }
 
       @media (max-width: $sm) {
