--- a/css/sections/services.css
+++ b/css/sections/services.css
@@ -32,10 +32,11 @@
       }
 
       @media (max-width: $md) {
-        width: 100%;
+        height: 270px;
       }
 
       @media (max-width: $sm) {
+        width: 100%;
         height: 280px;
         border: 0;
       }
@@ -69,24 +70,6 @@
         }
       }
 
-      /* CASE 1 */
-
-      /* &:nth-child(1),
-      &:nth-child(4) {
-        right: -1px;
-      }
-
-      &:nth-child(3),
-      &:nth-child(6) {
-        left: -1px;
-      }
-
-      &:nth-child(3) ~ * {
-        top: -1px;
-      } */
-
-      /* CASE 2 */
-
       @media (min-width: $xl_) {
         &:nth-child(1),
         &:nth-child(4) {
@@ -103,22 +86,16 @@
         }
       }
 
-      @media (min-width: $md_) and (max-width: $xl) {
-        &:nth-child(even) {
-          border-left: 0;
-        }
-
-        &:nth-child(6) {
-          border-bottom: 1px solid #000;
-        }
-      }
-
-      @media (max-width: $md) {
+      @media (min-width: $sm_) and (max-width: $xl) {
         & {
           border-bottom: 0;
         }
 
-        &:nth-child(6) {
+        &:nth-child(even) {
+          border-left: 0;
+        }
+
+        &:nth-child(4) ~ * {
           border-bottom: 1px solid #000;
         }
       }
