--- a/pug/section-header.pug
+++ b/pug/section-header.pug
@@ -5,7 +5,8 @@ section.section-header
         img(src="img/logo.png" alt="Trudohod")
         | APM
       div.about Компания №1 на Российском рынке по адаптивному управлению персоналом
-      div.phone +7 (999) 533 33 45
+      div.phone
+        a(href="tel:+79995333345") +7 (999) 533 33 45
 
   div.cont
     h1.main-heading У нас есть нужные Вам сотрудники!
