--- a/pug/section-reviews.pug
+++ b/pug/section-reviews.pug
@@ -2,20 +2,28 @@ section.section-reviews.cont
   h2.main-heading Что о нас говорят клиенты?
 
   div.reviews-items
-    div.review
-      img.avatar(src="img/reviews/avatar1.jpg" alt="Review 1")
-      div.review-text
-        p.name Дарья Ларионова
-        p.text Для подбора менеджеров в магазин детских товаров оставила заявку на сайте компании. Со мной связались и уточнили требования, обязанности и заработную плату сотрудников. И уже через (Внимание!) 2часа 24 минуты подобрали отличных работников. Спасибо за скорость подбора персонала!
+    //- div.review
+    //-   img.avatar(src="img/reviews/avatar1.jpg" alt="Review 1")
+    //-   div.review-text
+    //-     p.name Дарья Ларионова
+    //-     p.text Для подбора менеджеров в магазин детских товаров оставила заявку на сайте компании. Со мной связались и уточнили требования, обязанности и заработную плату сотрудников. И уже через (Внимание!) 2часа 24 минуты подобрали отличных работников. Спасибо за скорость подбора персонала!
 
-    div.review
-      img.avatar(src="img/reviews/avatar2.jpg" alt="Review 2")
-      div.review-text
-        p.name Владимир Будюк
-        p.text Являюсь владельцем нескольких небольших гостиниц. Для подбора персонала пользовался услугами аутсорсинговой компании. Обратился в «APM» и не пожалел. Я сократил свои расходы за подбор и ведение персонала на 27%.
+    //- div.review
+    //-   img.avatar(src="img/reviews/avatar2.jpg" alt="Review 2")
+    //-   div.review-text
+    //-     p.name Владимир Будюк
+    //-     p.text Являюсь владельцем нескольких небольших гостиниц. Для подбора персонала пользовался услугами аутсорсинговой компании. Обратился в «APM» и не пожалел. Я сократил свои расходы за подбор и ведение персонала на 27%.
 
+    //- div.review
+    //-   img.avatar(src="img/reviews/avatar3.jpg" alt="Review 3")
+    //-   div.review-text
+    //-     p.name Севиля Ибрагимова
+    //-     p.text Нашей компании по производству косметики и бытовой химии Unifrance понадобилось несколько сотрудников разных профессий. Специалисты компании  «APM» быстро подобрали нужный персонал. Всё понятно и прозрачно.  Большое спасибо! Продолжим сотрудничество!
+
+  //- Review template
+  template#review
     div.review
-      img.avatar(src="img/reviews/avatar3.jpg" alt="Review 3")
+      img.avatar(src="" alt="")
       div.review-text
-        p.name Севиля Ибрагимова
-        p.text Нашей компании по производству косметики и бытовой химии Unifrance понадобилось несколько сотрудников разных профессий. Специалисты компании  «APM» быстро подобрали нужный персонал. Всё понятно и прозрачно.  Большое спасибо! Продолжим сотрудничество!
+        p.name
+        p.text
