--- a/pug/section-footer.pug
+++ b/pug/section-footer.pug
@@ -1,10 +1,11 @@
-section.section-footer
+footer.section-footer
   div.cont
     div.logo
       img(src="img/logo.png" alt="Trudohod")
       | APM
 
-    div.phone +7 (999) 533 33 45
+    div.phone
+      a(href="tel:+79995333345") +7 (999) 533 33 45
 
     div.email
       a(href="mailto:info@apm1.ru") info@apm1.ru
