Change reviews request to external API service

--- a/css/sections/reviews.css
+++ b/css/sections/reviews.css
@@ -46,6 +46,7 @@
       top: 50%;
       transform: translateY(-50%);
       border-radius: 50%;
+      width: 140px;
 
       @media (max-width: $md) {
         width: 200px;
