--- a/pug/section-request-form.pug
+++ b/pug/section-request-form.pug
@@ -5,7 +5,7 @@ section.section-request-form
 
       input.input.input-name(type="text" placeholder="Имя")
       input.input.input-company(type="text" placeholder="Наименование компании")
-      input.input.inupt-phone(type="text" placeholder="Телефон")
+      input.input.input-phone(type="text" placeholder="Телефон")
       input.input.input-email(type="email" placeholder="e-mail")
 
       button.btn-send(type="button") Оставьте заявку
